# Face_Recognization_Alog_System

./: .gitgnore  README.md
Face_Alignment/: README.md  face_alignment.py
Face_Recognization_Pipeline/: Aligh_face_demo.py  Euler_angle_demo.py  FaceRec_whole_process_pc.py  FaceRecognizer_utils.py  Register_gallery_pc.py  Retinaface_utils.py
Face_Recognization_Pipeline/Face_Gallery/: gallery_kuangbiao_pc.csv
Face_Recognization_Pipeline/models/: mobilenet0_25.onnx
Face_Recongnization_Deploy/: README.md  trt_check.py
Face_Recongnization_Deploy/models/caffe/: centerface.prototxt
Face_Recongnization_Deploy/prj-cpp/: CMakeLists.txt  README.md  demo.cpp
Face_Recongnization_Deploy/prj-cpp/cpp/: cv_dnn_centerface.cpp  cv_dnn_centerface.h
Face_Recongnization_Deploy/prj-onnx2trt/: calibrator.py  demo.py
Face_Recongnization_Deploy/prj-pyquant/: centerface.py  demo.py
Face_Recongnization_Deploy/prj-python/: demo.py
Face_Recongnization_Deploy/prj-tensorrt/: centerface.py  demo.py
